# binary_logger

./: .gitignore  Cargo.toml  README.md
benches/: perf_tests.rs
examples/: log4rs_test.rs
scripts/: bench_stats.rs
src/: binary_logger.rs  efficient_clock.rs  lib.rs  log_format_registry.rs  log_reader.rs  loggable.rs  main  main.rs  string_registry.rs
tests/: clock_tests.rs  logger_tests.rs  reader_tests.rs  string_registry_tests.rs
